Fixing issue with scroll position info bleeding between pages
The new property name isn't intuitive, but the idea is that the scroll should now be reset to top of page on route change

--- a/src/app/projects/projects_page.scss
+++ b/src/app/projects/projects_page.scss
@@ -2,10 +2,6 @@ mat-card {
   cursor: pointer;
   margin: 20px 5%;
   max-width: 800px;
-
-  > p {
-    margin-left: 16px;
-  }
 }
 
 .page-container {
@@ -25,6 +21,10 @@ mat-card {
 
 img {
   min-height: 130px;
-  padding: 0 16px;
-  width: calc(100% - 32px);
+  width: 100%;
+}
+
+/* mat-card-header-title comes with a 16px padding for some unknown reason. */
+mat-card-header {
+  margin-left: -16px;
 }
